# carAndroid

./: build.gradle  gradle.properties  import-summary.txt  settings.gradle  开发记录.md  版本说明.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/car/bkrc/com/car2021/ActivityView/: DataChangeReceiver.java  FirstActivity.java  LoginActivity.java
app/src/main/java/car/bkrc/com/car2021/DataProcessingModule/: ConnectTransport.java  QR_Recognition.java  algorithm.java
app/src/main/java/car/bkrc/com/car2021/FragmentView/: LeftFragment.java  RightAutoFragment.java  RightFragment1.java  RightOtherFragment.java  (+1 more)
app/src/main/res/color/: selector_color.xml
app/src/main/res/drawable/: ic_one_ic_port.xml
app/src/main/res/layout/: activity_first1.xml  car_color.xml  car_shape.xml  left_fragment_mobilephone.xml  more_menu.xml  other_item.xml  right_auto_fragment.xml  right_other_fragment.xml  yolov5_fragment.xml
app/src/main/res/menu/: navigation_menu.xml  tool_rightitem.xml
app/src/main/res/values/: colors.xml  strings.xml
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary343/: build.gradle
openCVLibrary343/src/main/java/org/opencv/imgproc/: Imgproc.java
tess-two/: AndroidManifest.xml  build.gradle
tesseract/src/main/java/com/bkrc/car2019/tesseract/: BitmapUtils.java  ImgPretreatment.java  MainActivity.java
yolov5/: build.gradle
yolov5/src/main/: AndroidManifest.xml
yolov5/src/main/assets/: yolov5s.param
yolov5/src/main/java/com/tencent/yolov5ncnn/: MainActivity.java
yolov5/src/main/jni/: CMakeLists.txt  yolov5ncnn_jni.cpp
(+23 files in other folders)
